<resources>
    <string name="app_name">package-delivery-app-group-a</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="not_a_registered_user">Not Registered?</string>
    <string name="login_register"><u><b>Register</b></u></string>
    <!--    <string name="action_sign_in_short">Sign in</string>-->
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <!-- Forgot Password -->
    <string name="fgt_tittle">Forgot Password</string>
    <string name="fgt_desc">Please provide your email address.</string>
    <string name="fgt_submit">Submit</string>
    <string name="fgt_email">Email</string>

    <!-- Strings related to register -->
    <string name="register_tittle">CREATE ACCOUNT</string>
    <string name="register_fname">First Name</string>
    <string name="register_lname">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_cpassword">Confirm Password</string>
    <string name="register_register">Register</string>
    <string name="registered_user">Already an User?</string>
    <string name="register_login"><u><b>Login</b></u></string>
    <string name="register_failed" />
    <string name="launchimage">launchImage</string>
    <string name="launch">launch</string>
    <string name="register">register</string>

    <!-- Progress Bar-->
    <string name="prog_bar_txt">Loading ...</string>
    <!--SnackBar-->
    <string name="err_msg_first_name">Please enter first name</string>
    <string name="err_msg_last_name">Please enter last name</string>
    <string name="err_msg_email">Please enter email</string>
    <string name="err_msg_password">Please enter password</string>
    <string name="err_msg_cpassword">Please enter confirm password</string>
    <string name="err_msg_password_n_cpwd_mismatch">Passwords do not match</string>
    <string name="err_msg_input_required">Input Required!</string>
    <string name="not_reg_user">Not a registered User!</string>
    <string name="not_allowed_user">Not Allowed User!</string>
    <string name="not_err_details">Successfully Registered!</string>

    <string name="suc_msg_email_sent">Email sent successful, Reset your password!</string>
    <string name="suc_msg_login">Welcome!</string>

    <string name="info_permission">You already have the storage permission.</string>
    <string name="err_permission">Permission denied to read storage.</string>
    <string name="suc_permission">Permission granted to read storage.</string>
    <string name="err_img_sel">Image selection failed!</string>
    <string name="err_no_tel">Mobil number required!</string>
    <string name="suc_update">Profile updated successfully</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- Navigation Drawer Manager-->
    <string name="manager_main">Manager Main</string>
    <string name="menu_home">Home</string>
    <string name="menu_vendor">Vendor</string>
    <string name="menu_building">Building</string>
    <string name="menu_driver">Driver</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>

    <!-- Navigation Drawer Driver-->
    <string name="menu_driver_home">Home</string>
    <string name="menu_driver_history">History</string>
    <string name="menu_driver_account">Account</string>

    <!-- Manager Home page -->
    <string name="text_home_pending">Pending</string>
    <string name="text_home_on_the_way">On the Way</string>

    <!-- Manager Building page -->
    <string name="no_building_added_yet">No building added yet</string>

    <!-- Add New Package Fragement -->
    <string name="new_package_driver">Driver</string>
    <string name="new_package_vendor">Vendor</string>
    <string name="new_package_building">Building</string>
    <string name="new_package_weight">Weight</string>
    <string name="action_add_new_package">ADD</string>


    <string name="label_package_fragment">Package</string>
    <string name="label_new_item_fragment">New Package</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <!-- Driver Profile -->
    <string name="driver_pro_tittle">COMPLETE PROFILE</string>
    <string name="driver_procomp_tittle">EDIT PROFILE</string>
    <string name="content_description">Profile Completion</string>
    <string name="driver_pro_photo">Profile Image</string>
    <string name="driver_pro_fname">First Name</string>
    <string name="driver_pro_lname">Last Name</string>
    <string name="driver_pro_email">Email</string>
    <string name="driver_pro_tel">Phone Number</string>
    <string name="driver_pro_btn">Save</string>

    <!-- New Building -->
    <string name="site_name">Site Name</string>
    <string name="site_address">Address</string>
    <string name="site_person">Contact Person</string>
    <string name="site_number">Contact Number</string>
    <string name="site_email">Email</string>
    <string name="site_btn">Submit</string>
    <string name="site_lbl">Add New Building Site</string>

    <!-- New Vendor -->
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_address">Address</string>
    <string name="vendor_person">Contact Person</string>
    <string name="vendor_number">Contact Number</string>
    <string name="vendor_email">Email</string>
    <string name="vendor_btn">Submit</string>
    <string name="vendor_lbl">Add New Vendor</string>
    <string name="vendor_items">Select Items</string>
    <string name="vendor_type1">Sand</string>
    <string name="vendor_type2">Bricks</string>
    <string name="vendor_type3">Rock</string>
    <string name="vendor_type4">Cement</string>
    <string name="vendor_type5">Steel Bars</string>
    <string name="vendor_type6">Tools</string>
    <string name="vendor_type7">Pipe Fittings</string>
    <string name="vendor_type8">Hardware Elements</string>
    <string name="vendor_type9">Tiles</string>

    <!-- New Driver -->
    <string name="driver_fname">Driver First Name</string>
    <string name="driver_lname">Driver Last Name</string>
    <string name="driver_email">Email</string>
    <string name="driver_btn">Submit</string>
    <string name="driver_lbl">Add New Driver</string>
    <!--Account -->
    <string name="edit_lbl">Edit</string>
    <string name="logout_lbl">Logout</string>


    <!-- Package Status -->
    <string name="status">Status :  </string>
    <string name="status_id">Accepted</string>
    <string name="driver_name">Driver Name   </string>
    <string name="driver_pack_email">Driver Email</string>
    <string name="driver_contact_number">Contact Number</string>
    <string name="driver_new_task">New Task</string>
    <string name="driver_lbl_btn">OK</string>
    <string name="vendor_loc">Pick Up Location</string>
    <string name="build_loc">Drop Off Location</string>

    <string name="packageID">Order Id</string>
    <string name="status_pending">Accept</string>
    <string name="stasus_dispatched">Dispatched</string>
    <string name="status_delivered">Delivered</string>

    <!--Spinners-->
    <string name="vendor_select">Select Vendor</string>

    <string-array name="package_ontheway_vendor_array">
        <item>IKEA Southampton</item>
        <item>Buck and Hickman</item>
        <item>Howdens</item>
        <item>Eurocell</item>
        <item>Hampshire Ltd</item>
        <item>Solent Stevedores Ltd</item>
        <item>Solent Stevedores Ltd</item>
    </string-array>
    <string-array name="package_ontheway_building_array">
        <item>Mayflower Halls</item>
        <item>Southampton Port</item>
        <item>The Civic Centre</item>
        <item>Avenue Campus</item>
        <item>Highfield Campus</item>
        <item>King Edward School</item>
        <item>King Edward School</item>
    </string-array>
    <string-array name="package_ontheway_driver_array">
        <item>Basel Halak</item>
        <item>Geoff Merrett</item>
        <item>Kirk Martinez</item>
        <item>Ruomeng Huang</item>
        <item>Alex S Weddell</item>
        <item>Mohammed El-Hajjar</item>
        <item>Mohammed El-Hajjar</item>
    </string-array>
    <string-array name="package_pending_vendor_array">
        <item>Solent Stevedores Ltd</item>
        <item>IKEA Southampton</item>
        <item>Buck and Hickman</item>
        <item>Howdens</item>
        <item>Eurocell</item>
        <item>Hampshire Ltd</item>
        <item>Solent Stevedores Ltd</item>
    </string-array>
    <string-array name="package_pending_building_array">
        <item>King Edward School</item>
        <item>Mayflower Halls</item>
        <item>Southampton Port</item>
        <item>The Civic Centre</item>
        <item>Avenue Campus</item>
        <item>Highfield Campus</item>
        <item>King Edward School</item>
    </string-array>
    <string-array name="package_pending_driver_array">
        <item>Mohammed El-Hajjar</item>
        <item>Basel Halak</item>
        <item>Geoff Merrett</item>
        <item>Kirk Martinez</item>
        <item>Ruomeng Huang</item>
        <item>Alex S Weddell</item>
        <item>Mohammed El-Hajjar</item>
    </string-array>
    <string-array name="driver_package_vendor_array">
        <item>Solent Stevedores Ltd</item>
        <item>IKEA Southampton</item>
    </string-array>
    <string-array name="driver_package_building_array">
        <item>King Edward School</item>
        <item>Mayflower Halls</item>
    </string-array>
    <string-array name="driver_package_driver_array">
        <item>Mohammed El-Hajjar</item>
        <item>Basel Halak</item>
    </string-array>

    <!--    <string name="app_name">Affirmations</string>-->
    <string name="affirmation1">Basel Halak</string>
    <string name="affirmation2">Geoff Merrett</string>
    <string name="affirmation3">Kirk Martinez</string>
    <string name="affirmation4">Ruomeng Huang</string>
    <string name="affirmation5">Alex S Weddell</string>
    <string name="affirmation6">Mohammed El-Hajjar</string>
    <string name="affirmation7">Mohammed El-Hajjar</string>
    <string name="affirmation8">Shasini Umesha</string>
    <string name="affirmation9">Yifei Shi</string>
    <string name="affirmation10">Wu Si</string>
    <string name="title_activity_manager_main">ManagerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_driver_profile">DriverProfileActivity</string>
</resources>