<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/driver_navigation"
    app:startDestination="@+id/nav_home_driver">

    <fragment
        android:id="@+id/nav_home_driver"
        android:name="com.example.package_delivery_app_group_a.ui.driver.home.DriverHomeFragment"
        android:label="@string/menu_driver_home"
        tools:layout="@layout/fragment_home_driver" >
        <action
            android:id="@+id/action_nav_home_driver_to_packageStatusDriverFragment"
            app:destination="@id/packageStatusDriverFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_account_driver"
        android:name="com.example.package_delivery_app_group_a.ui.driver.account.DriverAccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account_driver" />

    <fragment
        android:id="@+id/nav_history_driver"
        android:name="com.example.package_delivery_app_group_a.ui.driver.history.DriverHistoryFragment"
        android:label="@string/menu_driver_history"
        tools:layout="@layout/fragment_history_driver" />
    <fragment
        android:id="@+id/packageStatusDriverFragment"
        android:name="com.example.package_delivery_app_group_a.ui.driver.PackageStatusDriverFragment"
        android:label="fragment_package_status_driver"
        tools:layout="@layout/fragment_package_status_driver" >
                <argument
                    android:name="packageVendorDriverId"
                    app:argType="string" />
                <argument
                    android:name="packageBuildingDriverId"
                    app:argType="string" />
                <argument
                    android:name="packagePackageDriverId"
                    app:argType="string" />
    </fragment>

    <!--    <fragment
    android:id="@+id/packageDetailFragment"
    android:name="com.example.package_delivery_app_group_a.PackageDetailFragment"
    android:label="@string/label_package_fragment"
    tools:layout="@layout/fragment_package_detail" >
    <argument
    android:name="packageID"
    app:argType="integer" />
    </fragment>
    -->


</navigation>
